--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -31,6 +31,8 @@ android {
     compileOptions {
         sourceCompatibility = JavaVersion.VERSION_1_8
         targetCompatibility = JavaVersion.VERSION_1_8
+        // Flag to enable support for the new language APIs
+        coreLibraryDesugaringEnabled true        
     }
 
     defaultConfig {
@@ -42,6 +44,7 @@ android {
         targetSdk = flutter.targetSdkVersion
         versionCode = flutterVersionCode.toInteger()
         versionName = flutterVersionName
+        multiDexEnabled true
     }
 
     buildTypes {
@@ -55,4 +58,19 @@ android {
 
 flutter {
     source = "../.."
+}
+
+dependencies {
+    coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:1.2.2'
+
+    // Next 'implementation' dependencies are a fix for 'coreLibraryDesugaringEnabled' issue
+    implementation 'androidx.window:window:1.0.0'
+    // For Java-friendly APIs to register and unregister callbacks
+    implementation 'androidx.window:window-java:1.0.0'
+    // For RxJava2 integration
+    implementation 'androidx.window:window-rxjava2:1.0.0'
+    // For RxJava3 integration
+    implementation 'androidx.window:window-rxjava3:1.0.0'
+    // For testing
+    implementation 'androidx.window:window-testing:1.0.0'
 }
