--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,10 +1,15 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
-    <!-- Permissions -->
+    <uses-permission android:name="android.permission.INTERNET" />
+    <!-- Permissions of local notifications -->
     <uses-permission android:name="android.permission.POST_NOTIFICATIONS"/> <!-- Permission to post notifications -->
     <uses-permission android:name="android.permission.VIBRATE"/>  <!-- Permission to vibrate the device -->
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED"/>  <!-- Receive boot completed event to reschedule notifications -->
     <uses-permission android:name="android.permission.SCHEDULE_EXACT_ALARM" /> <!-- Permission for scheduling exact alarms -->
     <uses-permission android:name="android.permission.USE_FULL_SCREEN_INTENT" /> <!-- Use full-screen intent notifications -->
+    <!-- Permissions options for the `location` group -->
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_BACKGROUND_LOCATION" />
     <application
         android:label="Prayer Times"
         android:name="${applicationName}"
