--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   flutter_timezone: ^3.0.1
   geolocator: ^13.0.1
   http: ^1.2.2
+  rename: ^3.0.2
   scrollable_positioned_list: ^0.3.8
   table_calendar: ^3.1.2
   timezone: ^0.9.4
